--- a/tut_py_1_print.ipynb
+++ b/tut_py_1_print.ipynb
@@ -447,12 +447,23 @@
     "id": "eb2abba7-5e88-42bb-802d-49634ba951b6"
    },
    "source": [
-    "### print special characters"
+    "### print special characters, aka escape sequence (that do not exist on keyboard)\n",
+    "- These are used to represent non-printable or reserved characters in strings\n",
+    "```\n",
+    "Escape Sequence Meaning\tExample\n",
+    "\\\\\tBackslash (\\)\t\"C:\\\\Users\\\\file.txt\"\n",
+    "\\'\tSingle quote (')\t'It\\'s zenith'\n",
+    "\\\"\tDouble quote (\")\t\"He said, \\\"You turned vermillion\\\"\"\n",
+    "\\a\tASCII Bell (alert)\tprint(\"\\a\") (beeps...only works if supported on ur computer)\n",
+    "\\b\tBackspace\t\"Hello\\b\" → \"Hell\"\n",
+    "\\r\tCarriage return\t\"Hello\\rWorld\" → World\n",
+    "\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "ca4069d4-6fee-440a-a222-80a5c10f676c",
    "metadata": {
     "colab": {
@@ -467,38 +478,46 @@
      "output_type": "stream",
      "text": [
       "HelloWorld!\n",
+      "Hello\n",
+      "World!\n",
+      "Hello\n",
+      "World\n",
       "Good\n",
       "Morning!\n",
-      "How\tare\tyou\tRahim!\n"
+      "#############################\n",
+      "How     are     you     Rahim!\n",
+      "How\tare\tyou\tRahim!\n",
+      "Hello\tWorld! This is my \tfirst example \tof tab\n",
+      "#############################\n",
+      "C:\\Users\\file.txt\n",
+      "It's a zenith\n",
+      "He said, \"You turned vermillion\"\n",
+      "His astute candor disarmed latent hostilitie\n",
+      " profound, serendipitous triumphs\n",
+      "Vertical\u000b",
+      " tab\tRarely\u000b",
+      " used\n"
      ]
     }
    ],
    "source": [
     "# print special character using / backslash\n",
     "print(\"HelloWorld!\")\n",
-    "print(\"Good\\nMorning!\")  # Newline \\n\n",
-    "print(\"How\\tare\\tyou\\tRahim!\")  # Tab \\t"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dd6e67a2-2122-4df5-a100-b49102aab8db",
-   "metadata": {
-    "id": "dd6e67a2-2122-4df5-a100-b49102aab8db",
-    "outputId": "6a820f76-559f-4a46-8b5e-4d1bf720530e"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello\tWorld! This is my \tfirst example \tof tab\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Hello\\tWorld! This is my \\tfirst example \\tof tab\")  # Tab"
+    "print(\"Hello\\nWorld!\")\n",
+    "print(\"Hello\\nWorld\\nGood\\nMorning!\")  # Newline \\n\n",
+    "print(\"#############################\")\n",
+    "print(\"How     are     you     Rahim!\")  # Tab \\t\n",
+    "print(\"How\\tare\\tyou\\tRahim!\")  # Tab \\t\n",
+    "print(\"Hello\\tWorld! This is my \\tfirst example \\tof tab\")  # Tab\n",
+    "print(\"#############################\")\n",
+    "print(\"C:\\\\Users\\\\file.txt\") # C:\\Users\\file.txt\n",
+    "print('It\\'s a zenith') # It's a zenith\n",
+    "print(\"He said, \\\"You turned vermillion\\\"\")\n",
+    "\n",
+    "#OPTIONAL\n",
+    "# print(\"\\a\")\n",
+    "# print(\"His astute candor disarmed latent hostilities\\b\") # His astute candor disarmed latent hostilitie\n",
+    "# print(\"Her tenacity ignited\\r profound, serendipitous triumphs\") # profound, serendipitous triumphs\n"
    ]
   },
   {
@@ -558,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "ebcc6ad1-fc09-4e6b-97fd-788d46459144",
    "metadata": {
     "id": "ebcc6ad1-fc09-4e6b-97fd-788d46459144",
@@ -570,46 +589,17 @@
      "output_type": "stream",
      "text": [
       "A\n",
-      "😀\n"
+      "😀\n",
+      "I am feeling  😀\n"
      ]
     }
    ],
    "source": [
     "# ASCII Characters using chr()\n",
     "print(chr(65))   # 'A'\n",
-    "print(chr(128512))  # 😀 Smiley Face"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39020688-560f-49fe-a5ed-a6ba2a278265",
-   "metadata": {
-    "id": "39020688-560f-49fe-a5ed-a6ba2a278265",
-    "outputId": "0bbdc7c7-aec2-4c51-8cff-e12f1456f7c4"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I am feeling  😀\n"
-     ]
-    }
-   ],
-   "source": [
+    "print(chr(128512))  # 😀 Smiley Face\n",
     "print(\"I am feeling \", chr(128512))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b74e4e2d-b083-479f-ab89-db883543e223",
-   "metadata": {
-    "id": "b74e4e2d-b083-479f-ab89-db883543e223"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
