--- a/tut_py_2_type_part1_numeric_str_tuple_list.ipynb
+++ b/tut_py_2_type_part1_numeric_str_tuple_list.ipynb
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ef232980-ec92-45bf-b9c6-fc3af4c1b45e",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,8 @@
       "python is cool language\n",
       "5555555555555555555555555555555\n",
       "\n",
-      "['today', ' is a good day', ' to learn something new.']\n"
+      "['today', ' is a good day', ' to learn something new.']\n",
+      "today, is a good day, to learn something new.\n"
      ]
     }
    ],
@@ -339,7 +340,7 @@
     "\n",
     "msg = \"today, is a good day, to learn something new.\"\n",
     "lst = msg.split(\",\")\n",
-    "print(lst) # ['today', ' is a good day', ' to learn something new.']\n"
+    "print(lst) # ['today', ' is a good day', ' to learn something new.']"
    ]
   },
   {
@@ -403,22 +404,6 @@
     "s[0]='Z'\n",
     "s # We get a error"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "6fcf1ac8-a135-4e1b-8a63-bcb1703bc11a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello++Bob++Julia\n"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -859,120 +844,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "82c36502-883f-4c2c-b596-0f4a71523ec5",
-   "metadata": {},
-   "source": [
-    "## List comprehension"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "b6b31aac-86d6-41cd-8071-cd1c7bc401d6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "numbers: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-      "times3: [3, 6, 9, 12, 15, 18, 21, 24, 27, 30]\n",
-      "squares: [1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 1. Basic List Comprehension\n",
-    "\n",
-    "#create a list of 10 numbers\n",
-    "numbers = [x for x in range(1, 11)]\n",
-    "print(f\"numbers: {numbers}\")\n",
-    "\n",
-    "# Create a list of squares from 1 to 10.\n",
-    "times3 = [x*3 for x in range(1, 11)]\n",
-    "print(f\"times3: {times3}\")\n",
-    "\n",
-    "# Create a list of squares from 1 to 10.\n",
-    "squares = [x**2 for x in range(1, 11)]\n",
-    "print(f\"squares: {squares}\")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "dc1215bb-f185-4334-a6bc-1b7a9a1f0566",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "numbers: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-      "evens:   [2, 4, 6, 8, 10]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 2. List Comprehension with Condition\n",
-    "# Get even numbers from 1 to 10.\n",
-    "\n",
-    "numbers = [x for x in range(1, 11)]\n",
-    "print(f\"numbers: {numbers}\")\n",
-    "\n",
-    "evens = [x for x in range(1, 11) if x % 2 == 0]\n",
-    "print(f\"evens:   {evens}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "d974aa4b-6280-413b-ad84-f7f3a9a6b861",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "numbers: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-      "['Odd', 'Even', 'Odd', 'Even', 'Odd', 'Even', 'Odd', 'Even', 'Odd', 'Even']\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 3. List Comprehension with if-else\n",
-    "numbers = [x for x in range(1, 11)]\n",
-    "print(f\"numbers: {numbers}\")\n",
-    "\n",
-    "labels = [\"Even\" if x % 2 == 0 else \"Odd\" for x in range(1, 11)]\n",
-    "print(labels)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "addf2c50-8ffe-4f9f-becd-669af7309528",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['o', 'i', 'a', 'e', 'o', 'e']\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 5. Real-World Example: Extract Vowels from a String\n",
-    "sentence = \"Python is awesome\"\n",
-    "vowels = [char for char in sentence if char.lower() in 'aeiou']\n",
-    "print(vowels)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "9b258979-f780-477e-856f-51283a595ffe",
    "metadata": {},
    "outputs": [
@@ -1301,7 +1174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
