--- a/tut_py_2_type_part2_dict_set.ipynb
+++ b/tut_py_2_type_part2_dict_set.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "78e344a7-c5f8-4225-90a9-d56dfb8e5bda",
    "metadata": {},
    "outputs": [
@@ -67,18 +67,18 @@
    ],
    "source": [
     "# creating dict: style2\n",
-    "student_scores = dict( [\n",
-    "    ('Alice',85),\n",
-    "    ('James',92),\n",
-    "    ('Rahim', 88)]\n",
-    ")\n",
+    "student_scores = {}\n",
+    "student_scores['Alice'] = 85\n",
+    "student_scores['James'] = 92\n",
+    "student_scores['Rahim'] = 88\n",
+    "\n",
     "print(student_scores)\n",
     "print(type(student_scores))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "2ea4fc56-44d2-4ae6-9b68-cec71728c280",
    "metadata": {},
    "outputs": [
@@ -92,12 +92,14 @@
     }
    ],
    "source": [
+    "# optional\n",
     "# creating dict: style3\n",
-    "student_scores = {}\n",
-    "student_scores['Alice'] = 85\n",
-    "student_scores['James'] = 92\n",
-    "student_scores['Rahim'] = 88\n",
     "\n",
+    "student_scores = dict( [\n",
+    "    ('Alice',85),\n",
+    "    ('James',92),\n",
+    "    ('Rahim', 88)]\n",
+    ")\n",
     "print(student_scores)\n",
     "print(type(student_scores))"
    ]
@@ -117,6 +119,7 @@
     }
    ],
    "source": [
+    "# Optional\n",
     "# creating dict: style4 (Using dict with zip()) \n",
     "names = [\"Alice\", \"James\", \"Rahim\"]\n",
     "scores = [85, 92, 88]\n",
@@ -128,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "ba1da969-6a07-4dc9-9cd7-f241a70d1377",
    "metadata": {},
    "outputs": [
@@ -584,7 +587,37 @@
    "metadata": {},
    "source": [
     "# Sets\n",
-    "### 1️. Creating and Accessing a set\n"
+    "### 1️. Creating set using { }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4edd019e-2e43-46d2-8923-ae09d755c861",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{8, 10, 2, 4}\n",
+      "<class 'set'>\n",
+      "############\n",
+      "{8, 10, 2, 4}\n",
+      "<class 'set'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "even = {8, 4, 10, 2}\n",
+    "print(even)\n",
+    "print(type(even))\n",
+    "print(\"############\")\n",
+    "\n",
+    "# lets add duplicates and they are removed\n",
+    "even = {8, 4, 10, 2, 4, 4} \n",
+    "print(even)\n",
+    "print(type(even))"
    ]
   },
   {
@@ -603,7 +636,6 @@
    ],
    "source": [
     "planets = {\"mars\", \"jupyter\", \"saturn\" } \n",
-    "\n",
     "print(planets)  "
    ]
   },
@@ -662,8 +694,31 @@
    "source": [
     "# Scenario: Storing a list of unique fruits.\n",
     "fruits = {\"apple\", \"banana\", \"cherry\", \"apple\", \"apple\"}  # Duplicates are removed\n",
-    "\n",
     "print(fruits)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b18f55e3-d3a2-4981-891a-bffdf3093594",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'set' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# accessing set\u001b[39;00m\n\u001b[0;32m      2\u001b[0m planets \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmars\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mjupyter\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msaturn\u001b[39m\u001b[38;5;124m\"\u001b[39m } \n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mplanets\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m]\u001b[49m)  \n",
+      "\u001b[1;31mTypeError\u001b[0m: 'set' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "# cannot accessing set: 'set' object is not subscriptable\n",
+    "planets = {\"mars\", \"jupyter\", \"saturn\" } \n",
+    "print(planets[2])  "
    ]
   },
   {
@@ -822,7 +877,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
