--- a/tut_py_3_function_0_input_isinstance_userDefined_practice.ipynb
+++ b/tut_py_3_function_0_input_isinstance_userDefined_practice.ipynb
@@ -1114,6 +1114,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mirrored Left-Angled Triangle with 5 rows:\n",
+      "*\n",
+      "**\n",
+      "***\n",
+      "****\n",
+      "*****\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_mirrored_left_triangle(rows):\n",
+    "  \"\"\"Prints a mirrored left-angled triangle.\n",
+    "  \"\"\"\n",
+    "\n",
+    "  for i in range(1, rows + 1):\n",
+    "    # Print asterisks (no leading spaces needed for a left-aligned triangle)\n",
+    "    print(\"*\" * i)\n",
+    "\n",
+    "# Example usage:\n",
+    "print(\"Mirrored Left-Angled Triangle with 5 rows:\")\n",
+    "print_mirrored_left_triangle(5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [
@@ -1514,7 +1546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
