--- a/tut_py_3_0_conditional_ifelse.ipynb
+++ b/tut_py_3_0_conditional_ifelse.ipynb
@@ -29,34 +29,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x is greatenr than 5\n",
+      "x is greater than 5\n",
       "I am happy for x\n",
-      "are you happy for x?\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = 10\n",
-    "if x > 5:\n",
-    "    print(\"x is greatenr than 5\")\n",
-    "    print(\"I am happy for x\")\n",
-    "    print(\"are you happy for x?\")\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "fa01516e-5ea3-48f4-8e83-1244905d2912",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x is greatenr than 5\n",
-      "I am happy for x\n",
-      "are you happy for x?\n"
+      "are you happy for x?\n",
+      "I have exited the if condition\n"
      ]
     }
    ],
@@ -65,13 +41,14 @@
     "if x > 5:\n",
     "    print(\"x is greater than 5\")\n",
     "    print(\"I am happy for x\")\n",
-    "print(\"are you happy for x?\")    \n",
-    "    "
+    "    print(\"are you happy for x?\")\n",
+    "\n",
+    "print(\"I have moved past the if condition\")    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "9cff667a-8710-48b3-9cd4-2fd3abbcea05",
    "metadata": {},
    "outputs": [
@@ -79,7 +56,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x is less than 5\n"
+      "x is less than 5\n",
+      "I have moved past the if-else condition\n"
      ]
     }
    ],
@@ -90,7 +68,9 @@
     "if x < 5:\n",
     "    print(\"x is less than 5\")\n",
     "else:\n",
-    "    print(\"x is not less than 5\")"
+    "    print(\"x is not less than 5\")\n",
+    "\n",
+    "print(\"I have moved past the if-else condition\")    \n"
    ]
   },
   {
@@ -149,6 +129,21 @@
     "    print(f\"Wow {name}, you're already 100 years old this year!\")\n",
     "else:\n",
     "    print(f\"Hey {name}, you turned 100 years old {age - 100} years ago.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f27b155a-a1c1-4071-9729-6435e0610dfa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num = 7\n",
+    "\n",
+    "if num % 2 == 0:\n",
+    "    print(\"Even number\")\n",
+    "else:\n",
+    "    print(\"Odd number\")\n"
    ]
   },
   {
@@ -222,18 +217,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f365f1f3-f9d1-4a18-a3e5-8a26dd661abc",
+   "metadata": {},
+   "source": [
+    "# if with 'and' 'or'"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99fafc0c-a11b-44ae-9f39-f3a22f387968",
+   "id": "4311c784-1845-4d6e-bd42-90160de4a6e5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "num = 7\n",
+    "# if with 'or'\n",
     "\n",
-    "if num % 2 == 0:\n",
-    "    print(\"Even number\")\n",
+    "#e.g.1\n",
+    "age = 16\n",
+    "if age < 13 or age > 65:  # Check if the age is less than 13 or greater than 65\n",
+    "    print(\"You are eligible for a child or senior ticket.\")\n",
     "else:\n",
-    "    print(\"Odd number\")\n"
+    "    print(\"You are eligible for an adult ticket.\")\n",
+    "print(\"######################\")\n",
+    "\n",
+    "#e.g.2\n",
+    "user_input = input(\"Do you want to continue? (yes/no): \").strip().lower()\n",
+    "if user_input == \"yes\" or user_input == \"no\":  # Check if the input is valid\n",
+    "    print(\"Thank you for your response.\")\n",
+    "else:\n",
+    "    print(\"Invalid input. Please enter 'yes' or 'no'.\")\n",
+    "\n",
+    "#e.g.3\n",
+    "temperature = 95  # Temperature in Fahrenheit\n",
+    "if temperature > 90 or temperature < 32:  # Check if it's too hot or too cold\n",
+    "    print(\"Weather alert: Extreme temperature!\")\n",
+    "else:\n",
+    "    print(\"Temperature is within a normal range.\")\n",
+    "\n"
    ]
   },
   {
@@ -243,6 +264,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# if with 'and'\n",
+    "\n",
+    "#e.g.1\n",
     "#  Checking User Login Credentials\n",
     "username = \"admin\"\n",
     "password = \"1234\"\n",
@@ -250,7 +274,65 @@
     "if username == \"admin\" and password == \"1234\":\n",
     "    print(\"Login successful!\")\n",
     "else:\n",
-    "    print(\"Invalid username or password.\")\n"
+    "    print(\"Invalid username or password.\")\n",
+    "print(\"##################\")\n",
+    "\n",
+    "#e.g.2\n",
+    "membership_status = \"gold\"\n",
+    "purchase_amount = 150 \n",
+    "\n",
+    "if membership_status == \"gold\" and purchase_amount > 100:  # Check if both conditions are met\n",
+    "    print(\"You are eligible for a 20% discount!\")\n",
+    "else:\n",
+    "    print(\"You are not eligible for a discount.\")\n",
+    "\n",
+    "#e.g.3\n",
+    "exam_score = 78\n",
+    "attendance_percentage = 85  # Attendance in percentage\n",
+    "\n",
+    "if exam_score >= 70 and attendance_percentage >= 75:  # Check if both conditions are met\n",
+    "    print(\"Congratulations! You have passed the course.\")\n",
+    "else:\n",
+    "    print(\"You need to improve your score or attendance to pass.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2951acf7-88cf-4ffd-be4c-df5e3af16256",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are eligible for the scholarship!\n",
+      "####################\n",
+      "Access granted to the restricted area.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# if with 'and' and 'or'\n",
+    "\n",
+    "#e.g.1\n",
+    "gpa = 3.5\n",
+    "extracurriculars = 2  # Number of extracurricular activities\n",
+    "\n",
+    "if (gpa >= 3.0 and extracurriculars >= 2) or gpa >= 3.8:  # Check if either condition is met\n",
+    "    print(\"You are eligible for the scholarship!\")\n",
+    "else:\n",
+    "    print(\"You are not eligible for the scholarship.\")\n",
+    "print(\"####################\")\n",
+    "\n",
+    "#e.g.2\n",
+    "user_role = \"editor\"\n",
+    "is_active = True\n",
+    "\n",
+    "if (user_role == \"admin\" or user_role == \"editor\") and is_active:  # Check if the user is an admin or editor and is active\n",
+    "    print(\"Access granted to the restricted area.\")\n",
+    "else:\n",
+    "    print(\"Access denied.\")"
    ]
   },
   {
@@ -258,7 +340,7 @@
    "id": "ecd5f73f-c276-466d-acaa-3603235cc8f1",
    "metadata": {},
    "source": [
-    "## Using if with in (Checking List Membership)"
+    "## Using if with 'in' (Checking List Membership)"
    ]
   },
   {
@@ -359,115 +441,6 @@
     "else:\n",
     "    print(\"You are too young to drive.\")\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "81b31fc3-73c6-4bd3-93d1-2cbdfa8e443c",
-   "metadata": {},
-   "source": [
-    "## for and if and break and continue "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "a08f4fdd-15d6-4a75-80b6-115aaec80dc8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "210 231 252 273 294 315 336 357 378 399 "
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "63bf5f6e-e804-4e59-86cf-ca09661ccb1f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "201 203 204 207 210 213 216 217 219 222 224 225 228 231 234 237 238 240 243 245 246 249 252 255 258 259 261 264 266 267 270 273 276 279 280 282 285 287 288 291 294 297 300 301 303 306 308 309 312 315 318 321 322 324 327 329 330 333 336 339 342 343 345 348 350 351 354 357 360 363 364 366 369 371 372 375 378 381 384 385 387 390 392 393 396 399 "
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "abfa2cd3-81e6-4947-ad6b-24dc7967619f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[201, 203, 204, 207, 210, 213, 216, 217, 219, 222, 224, 225, 228, 231, 234, 237, 238, 240, 243, 245, 246, 249, 252, 255, 258, 259, 261, 264, 266, 267, 270, 273, 276, 279, 280, 282, 285, 287, 288, 291, 294, 297, 300, 301, 303, 306, 308, 309, 312, 315, 318, 321, 322, 324, 327, 329, 330, 333, 336, 339, 342, 343, 345, 348, 350, 351, 354, 357, 360, 363, 364, 366, 369, 371, 372, 375, 378, 381, 384, 385, 387, 390, 392, 393, 396, 399]\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "df11b52f-d309-4b24-b2dc-7499d8b4b564",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "4\n",
-      "7\n",
-      "8\n",
-      "15\n",
-      "Good bye. I am leaving the loop\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff73c7be-b03e-474b-95e4-fbe23ea5fe9e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "1f3f9042-fafb-4160-a7e1-3f86cda4d261",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total number of s is: 10\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "51aa0e0b-20a1-4153-acd6-4e16698c1122",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
