--- a/tut_py_3_function_0_inbuilt-input-isinstance_etc_userDefined_practice.ipynb
+++ b/tut_py_3_function_0_inbuilt-input-isinstance_etc_userDefined_practice.ipynb
@@ -11,6 +11,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### input , int, float"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -262,32 +269,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The full name is: ash----   ++ kumar\n"
+      "The full name is: ash----   ++ kumar\n",
+      "######################\n"
      ]
-    }
-   ],
-   "source": [
-    "# string contat.\n",
-    "first_name = 'ash'\n",
-    "last_name = 'kumar'\n",
-    "\n",
-    "full_name = first_name + \"----   ++ \" + last_name  # + \"\\u2600\"\n",
-    "\n",
-    "print(\"The full name is:\", full_name)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "name": "stdin",
      "output_type": "stream",
@@ -300,11 +292,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The full name is: ashkumar\n"
+      "The full name is: ash kumar\n"
      ]
     }
    ],
    "source": [
+    "# string contat.\n",
+    "first_name = 'ash'\n",
+    "last_name = 'kumar'\n",
+    "\n",
+    "full_name = first_name + \"----   ++ \" + last_name  # + \"\\u2600\"\n",
+    "\n",
+    "print(\"The full name is:\", full_name)\n",
+    "print(\"######################\")\n",
+    "\n",
     "first_name = input(\"enter your first name: \")\n",
     "last_name = input(\"enter your last name: \")\n",
     "\n",
@@ -401,25 +402,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: 'rishabh'",
+     "evalue": "invalid literal for int() with base 10: 'krishabhhh'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[26], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m a \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrishabh\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m----> 2\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(x)\n",
-      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: 'rishabh'"
+      "Cell \u001b[1;32mIn[4], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m a \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mkrishabhhh\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m----> 2\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(x)\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: 'krishabhhh'"
      ]
     }
    ],
    "source": [
-    "a = \"rishabh\"\n",
+    "a = \"krishabhhh\"\n",
     "x = int(a)\n",
     "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### len, range"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "[2, 4, 6, 8, 10, 12, 14]\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = [\"Guava\", \"Kiwi\", \"Mango\"]\n",
+    "print(len(fruits))\n",
+    "\n",
+    "numbers = list(range(2,15,2))\n",
+    "print(numbers)"
    ]
   },
   {
