--- a/tut_py_3_0_conditional_ifelse.ipynb
+++ b/tut_py_3_0_conditional_ifelse.ipynb
@@ -80,7 +80,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter your name:  ash\n",
@@ -268,13 +268,15 @@
     "\n",
     "#e.g.1\n",
     "#  Checking User Login Credentials\n",
-    "username = \"admin\"\n",
-    "password = \"1234\"\n",
+    "# if with 'and'\n",
+    "username = input(\"Username:\")\n",
+    "password = input(\"Enter password:\")\n",
     "\n",
-    "if username == \"admin\" and password == \"1234\":\n",
-    "    print(\"Login successful!\")\n",
+    "if username == \"admin\" and password == \"12345\":\n",
+    "    print(\"Successful login\")\n",
     "else:\n",
-    "    print(\"Invalid username or password.\")\n",
+    "    print(\"Invalid login\")\n",
+    "\n",
     "print(\"##################\")\n",
     "\n",
     "#e.g.2\n",
