--- a/tut_py_3_function_0_inbuilt-input-isinstance_etc_userDefined_practice.ipynb
+++ b/tut_py_3_function_0_inbuilt-input-isinstance_etc_userDefined_practice.ipynb
@@ -7,7 +7,8 @@
     "# FUNCTION: inbuilt and user-defined\n",
     "\n",
     "## in built function: input \n",
-    "- examples of in built fn: print, input, int, float, len, range, type, list, tuple, dict, isinstance, map, filter, any, etc"
+    "- examples of in built fn: print, input, int, float, len, range, type, list, tuple, dict, isinstance, map, filter, any, etc\n",
+    "- sorted"
    ]
   },
   {
@@ -44,7 +45,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "enter your first number 2\n",
@@ -114,7 +115,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "enter your first number 3\n",
@@ -151,7 +152,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "enter your first number 5\n",
@@ -187,7 +188,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "enter your first number 2\n",
@@ -220,7 +221,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "enter your first number 2\n",
@@ -281,7 +282,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "enter your first name:  ash\n",
@@ -344,7 +345,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "enter your first number 3\n",
@@ -527,6 +528,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sorted\n",
+    "l = [5, 0, 3, 9, 1]\n",
+    "sorted_l = sorted(l)\n",
+    "print(l)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -682,7 +695,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter your first number: 3\n",
@@ -1292,7 +1305,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Which operation would you like to perform? (+, -, *):  +\n",
