--- a/tut_py_3_1_loop_for_listcomprehension_while_break_continue.ipynb
+++ b/tut_py_3_1_loop_for_listcomprehension_while_break_continue.ipynb
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "1e3f5df0-5ad5-4a88-bbb3-28a8a9bf1f8c",
    "metadata": {},
    "outputs": [
@@ -252,13 +252,13 @@
    "source": [
     "#prints in new line\n",
     "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
-    "for fruit in fruits:\n",
-    "    print(fruit)"
+    "for f in fruits:\n",
+    "    print(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "8d6ff012-75cb-4e2e-8e38-dcc598090ef5",
    "metadata": {},
    "outputs": [
@@ -273,13 +273,13 @@
    "source": [
     "# prints in 1 line\n",
     "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
-    "for fruit in fruits:\n",
-    "    print(fruit, end = \" \")"
+    "for f in fruits:\n",
+    "    print(f, end = \" \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ded904d5-8a83-417b-94cf-8dfc78a6a107",
    "metadata": {},
    "outputs": [
@@ -295,8 +295,8 @@
    ],
    "source": [
     "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
-    "for fruit in fruits:\n",
-    "    print(f\"I love {fruit}\")"
+    "for f in fruits:\n",
+    "    print(f\"I love {f}\")"
    ]
   },
   {
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "b02351bb-9c73-4423-a455-d3bde8d3894e",
    "metadata": {},
    "outputs": [
@@ -448,7 +448,17 @@
     "    scaled_n = n*2\n",
     "    result.append(scaled_n)\n",
     "\n",
-    "print(result)\n"
+    "print(result)\n",
+    "\n",
+    "\n",
+    "# lets give employees 20% hike\n",
+    "salary  = [10000, 30000, 6000, 300000, 500000]\n",
+    "new_salary = []\n",
+    "for n in salary:\n",
+    "    hiked_n = n * .2 + n\n",
+    "    new_salary.append(hiked_n)\n",
+    "\n",
+    "print(new_salary)\n"
    ]
   },
   {
@@ -540,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "f051e5c0-9603-4b61-b59d-e31045d7764e",
    "metadata": {},
    "outputs": [
@@ -564,7 +574,7 @@
    "source": [
     "# 1. Basic List Comprehension\n",
     "\n",
-    "#create a list of 10 numbers\n",
+    "#create a list of 10 numbers using range: NOTE print(range(1,11)) is not going to work\n",
     "result = []\n",
     "for n in range(1,11):\n",
     "    result.append(n)\n",
@@ -582,8 +592,8 @@
     "numbers = [1, 2, 3, 4, 5]\n",
     "result = []\n",
     "for n in numbers:\n",
-    "    scaled_n = n*2\n",
-    "    result.append(scaled_n)\n",
+    "    # scaled_n = n*2\n",
+    "    result.append(n*2)\n",
     "\n",
     "print(result)\n",
     "print(\"####\")\n",
@@ -606,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "cd1f4b60-8ce9-4b03-a64f-478e6361c07a",
    "metadata": {},
    "outputs": [
@@ -627,7 +637,12 @@
     "print(f\"numbers: {numbers}\")\n",
     "\n",
     "evens = [n for n in range(1, 11) if n % 2 == 0]\n",
-    "print(f\"evens:   {evens}\")"
+    "print(f\"evens:   {evens}\")\n",
+    "\n",
+    "\n",
+    "# list of multiple of 3 and 5 : 15 30 all the way upto 100\n",
+    "list_3_5 = [n for n in range(1,101) if n%3 == 0 and n%5 == 0]\n",
+    "print(list_3_5)\n"
    ]
   },
   {
@@ -1313,7 +1328,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter a number (0 to stop):  4\n"
@@ -1327,7 +1342,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter a number (0 to stop):  8\n"
@@ -1341,7 +1356,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter a number (0 to stop):  4\n"
@@ -1355,7 +1370,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter a number (0 to stop):  0\n"
@@ -1470,8 +1485,17 @@
    "outputs": [],
    "source": [
     "# 5. Infinite Loop (Press Ctrl+C to Stop) DANGEROUS\n",
-    "while True:\n",
-    "    print(\"This is an infinite loop. Press Ctrl+C to stop.\")\n"
+    "\n",
+    "#infinite loop\n",
+    "# i = 1\n",
+    "# while i>0:\n",
+    "#     print(\"hello\")\n",
+    "#     i += 2\n",
+    "    \n",
+    "\n",
+    "\n",
+    "# while True:\n",
+    "#     print(\"This is an infinite loop. Press Ctrl+C to stop.\")\n"
    ]
   },
   {
