--- a/tut_py_3_function_0_inbuilt-input-isinstance_etc_userDefined_practice.ipynb
+++ b/tut_py_3_function_0_inbuilt-input-isinstance_etc_userDefined_practice.ipynb
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -679,13 +679,14 @@
    ],
    "source": [
     "# 3. Function with Return Value\n",
-    "def add_numbers(a, b):\n",
+    "def add(a, b):\n",
     "    \"\"\"This function returns the sum of two numbers.\"\"\"\n",
     "    ans = a + b\n",
     "    return ans\n",
     "\n",
     "# Store and print the result\n",
-    "result = add_numbers(5, 3)\n",
+    "# result = add(                3,        4)\n",
+    "result = add(5, 3)\n",
     "print(\"The sum is:\", result)\n"
    ]
   },
@@ -727,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -739,6 +740,7 @@
     }
    ],
    "source": [
+    "# step1: Unprofessinal way\n",
     "def calculate_simple_interest(principal, rate, time):\n",
     "    \"\"\"Calculates the simple interest earned on a principal amount.\n",
     "    \"\"\"\n",
@@ -755,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +770,7 @@
     }
    ],
    "source": [
-    "# a more professional way\n",
+    "# step2) a more professional way\n",
     "def calculate_simple_interest(principal, rate, time):\n",
     "    \"\"\"Calculates the simple interest earned on a principal amount.\n",
     "\n",
@@ -821,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -837,20 +839,21 @@
    ],
    "source": [
     "# 4. Function with Default Parameters\n",
-    "def power(base, exponent=2):\n",
-    "    \"\"\"This function raises a number to a power. Default exponent is 2.\"\"\"\n",
-    "    return base ** exponent\n",
     "\n",
-    "# Calling the function\n",
-    "print(f\"The 3 to the power of 2 is {power(3)}\")      # Uses default exponent 2\n",
-    "print(power(3, 4))   # Uses provided exponent 3\n",
-    "print(power(5, 3))   \n",
-    "print(power(125,125))\n"
+    "#e.g.1\n",
+    "def add(a=0, b=0):\n",
+    "    res = a + b\n",
+    "    return res\n",
+    "\n",
+    "# ans = add()\n",
+    "ans = add(3)\n",
+    "# ans = add(3,4)\n",
+    "print(ans)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +871,19 @@
     }
    ],
    "source": [
-    "# professional way of doing above\n",
+    "#e.g.2 Unprofessinal way\n",
+    "def power(base, exponent=2):\n",
+    "    \"\"\"This function raises a number to a power. Default exponent is 2.\"\"\"\n",
+    "    return base ** exponent\n",
+    "\n",
+    "# Calling the function\n",
+    "print(f\"The 3 to the power of 2 is {power(3)}\")      # Uses default exponent 2\n",
+    "print(power(3, 4))   # Uses provided exponent 3\n",
+    "print(power(5, 3))   \n",
+    "print(power(125,125))\n",
+    "\n",
+    "##########################################\n",
+    "# e.g.2: professional way of doing above\n",
     "def power(base, exponent=2):\n",
     "    \"\"\"Calculates the power of a number.\n",
     "\n",
@@ -922,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -941,12 +956,17 @@
     "    \"\"\"\n",
     "    area = length * width\n",
     "    perimeter = 2 * (length + width)\n",
-    "    msg = \"success\"\n",
-    "    return area, perimeter, msg\n",
+    "    price = 2000*area\n",
+    "    return area, perimeter, price\n",
     "\n",
     "# Call the function and unpack results\n",
-    "ar, per, msg = rectangle_properties(5, 10)\n",
-    "print(f\"Area: {ar}, Perimeter: {per}, Message: {msg}\")\n"
+    "result = rectangle_properties(5, 10)\n",
+    "print(result)\n",
+    "\n",
+    "ar   = result[0]\n",
+    "peri = result[1]\n",
+    "pri  = result[2] \n",
+    "print(f\"Area: {ar}, Perimeter: {peri}, Price: {pri}\")\n"
    ]
   },
   {
@@ -1153,6 +1173,40 @@
     "number6 = 10.5\n",
     "maximum3 = find_maximum(number5, number6)\n",
     "print(f\"The maximum of {number5} and {number6} is: {maximum3}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# find maximum from a list/tuple/set\n",
+    "def maximum_item(my_list=[]):\n",
+    "    max_value = = my_list[0]\n",
+    "    for i in my_list:\n",
+    "        if i > max_value:\n",
+    "            max_value = i\n",
+    "\n",
+    "    return max_value\n",
+    "\n",
+    "l = [3,1,5,2]\n",
+    "res = maximum_item(l)\n",
+    "print(res)\n",
+    "\n",
+    "#########################\n",
+    "# find minimum from a list/tuple/set\n",
+    "def minimum_item(my_list=[]):\n",
+    "    min_value = my_list[0]\n",
+    "    for i in my_list:\n",
+    "        if i < min_value:\n",
+    "            min_value = i\n",
+    "\n",
+    "    return min_value\n",
+    "\n",
+    "l = [3,1,5,2]\n",
+    "res = minimum_item(l)\n",
+    "print(res)"
    ]
   },
   {
