--- a/tut_py_1_print.ipynb
+++ b/tut_py_1_print.ipynb
@@ -442,6 +442,58 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bc199daa-4f07-4940-9fb4-e6a0b986f661",
+   "metadata": {},
+   "source": [
+    "## print using format the float numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86c6d458-1592-4966-a2d0-ec3631b743ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number is 3.14\n",
+      "############\n",
+      "Formatted number with comma: 1,234,567.89\n",
+      "############\n",
+      "1234567890123456789\n",
+      "1     |  10.12\n",
+      "2     |  20.25\n",
+      "3     |  30.37\n",
+      "############\n",
+      "Success rate: 85.7%\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = 3.14159\n",
+    "print(f\"The number is {number:.2f}\")\n",
+    "\n",
+    "print(\"############\")\n",
+    "number = 1234567.8912\n",
+    "print(f\"Formatted number with comma: {number:,.2f}\") # formats the number with commas as thousands separators and two decimal places.\n",
+    "\n",
+    "print(\"############\")\n",
+    "# left-aligns the integer i within 5 characters; right-aligns the float value within 6 characters, formatted to two decimal places.\n",
+    "print(\"1234567890123456789\")\n",
+    "for i in range(1, 4):\n",
+    "    value = i * 10.1234\n",
+    "    print(f\"{i:<5} | {value:>6.2f}\") \n",
+    "\n",
+    "\n",
+    "print(\"############\")\n",
+    "ratio = 0.857\n",
+    "print(f\"Success rate: {ratio:.1%}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "eb2abba7-5e88-42bb-802d-49634ba951b6",
    "metadata": {
     "id": "eb2abba7-5e88-42bb-802d-49634ba951b6"
@@ -494,8 +546,8 @@
       "He said, \"You turned vermillion\"\n",
       "His astute candor disarmed latent hostilitie\n",
       " profound, serendipitous triumphs\n",
-      "Vertical\u000b",
-      " tab\tRarely\u000b",
+      "Vertical\u000b\n",
+      " tab\tRarely\u000b\n",
       " used\n"
      ]
     }
@@ -621,7 +673,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
