--- a/tut_py_1_print.ipynb
+++ b/tut_py_1_print.ipynb
@@ -652,6 +652,19 @@
     "print(chr(128512))  # 😀 Smiley Face\n",
     "print(\"I am feeling \", chr(128512))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2dd4139f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# you can also print to file\n",
+    "f = open('output.txt', 'w')  # Open the file in write mode\n",
+    "print(\"Hello, world!\", file=f)  # Print to the file\n",
+    "f.close()  # Don't forget to close the file"
+   ]
   }
  ],
  "metadata": {
